[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/tile.png" type="Texture" id=1]
[ext_resource path="res://src/actor/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/background2.png" type="Texture" id=3]
[ext_resource path="res://src/MainLevel.gd" type="Script" id=4]
[ext_resource path="res://assets/sahara-lucjo.mp3" type="AudioStream" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 15.9128, 16, 0.0239944, 16, 0, 0, 16, 0.0404186 )

[sub_resource type="TileSet" id=2]
0/name = "tile.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="MainLevel" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
format = 1
tile_data = PoolIntArray( -65537, 0, 0, -131027, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65500, 0, 0, -65499, 0, 0, -65498, 0, 0, -65497, 0, 0, -65496, 0, 0, -65495, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, 65535, 0, 0, 45, 0, 0, 131071, 0, 0, 65581, 0, 0, 196607, 0, 0, 131117, 0, 0, 262143, 0, 0, 196653, 0, 0, 327679, 0, 0, 262189, 0, 0, 393215, 0, 0, 327725, 0, 0, 458751, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393261, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 370.242, 59.2813 )

[node name="background" type="Sprite" parent="."]
visible = false
position = Vector2( 360, 738.392 )
z_index = -5
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Timer" type="Timer" parent="."]

[node name="TempTimer" type="Timer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="background2" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 358.655, 640.358 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TempTimer" to="." method="_on_TempTimer_timeout"]
